<resources>
    <string name="app_name">Task Rider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="assigned_to">Assigned to : </string>
    <string name="create_new_todo">Create new</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="folloup_date_time">Follow up date time</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_que">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="create_new_account">I am new user</string>
    <string name="confirm_password">Confirm  password</string>
    <string name="signup">Sign Up</string>
    <string name="i_already_have_acc">I already have an account. Go to login</string>
    <string name="set_repeat">Set repeat</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="assign_to">Assign to</string>
    <string name="speech_prompt">Speak now</string>
    <string name="speech_not_supported">Speech not supported</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="logout">Logout</string>
    <string name="apply">Apply</string>
    <string name="next_year">Next year</string>
    <string name="next_month">Next 30 days</string>
    <string name="next_week">Next 7 days</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="clear">Clear</string>
    <string name="filter_by">Filter by</string>
    <string name="one_time">One time</string>
    <string name="select_language">Select Language</string>
    <string name="repeat_day">Repeat Day</string>
    <string name="monday">Monday</string>
    <string name="set_repeat_day">Set repeat day</string>
    <string name="repeat_date">Repeat date</string>
    <string name="reminder">Reminder</string>
    <string name="task">Task</string>
    <string name="today">Today</string>
    <string name="error_enter_title">Please enter title here !</string>
    <string name="error_provide_date">Date is required !</string>
    <string name="error_provide_time">Time is required !</string>
    <string name="error_provide_repeat_day">Repeat day is required !</string>
    <string name="error_provide_repeat_date">Repeat date is required !</string>
    <string name="select_day">Select day</string>
    <string name="finish_task">Do you want finish it ?</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="warning">Warning</string>
    <string name="delete_alert">Are you sure you want to delete ?</string>
    <string name="add_comment">Add Comment</string>
    <string name="complete">Complete</string>
    <string name="comment_required">Comment is required !</string>
    <string name="alert_add_followup_date">Do you want to change follow up date ?</string>
    <string name="done">Done</string>
    <string name="invite">Invite</string>
    <string name="set_snooze">Set Snooze Time</string>
    <string name="five_min">5 Min</string>
    <string name="ten_min">10 Min</string>
    <string name="ten_five_min">15 Min</string>
    <string name="thirty_min">30 Min</string>
    <string name="one_hour">1 Hour</string>
    <string name="save">Save</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="task_list">Task list</string>
    <string name="task_not_available">You have no task yet !</string>
    <string name="task_reminder_not_available">You don\'t have any task reminders yet!!</string>
    <string name="update">Update</string>
    <string name="reopen">Reopen</string>
    <string name="password_not_matched">Password not matched !</string>
    <string name="password_required">Password required !</string>
    <string name="pls_wait">Please wait…</string>
    <string name="logging">Logging in…</string>
    <string name="provide_valid_password"><![CDATA[Password must contain minimum 6 chars including one letter, one digit & one special character !]]></string>
    <string name="contact_not_found">Contact not found !</string>
    <string name="search">Search</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="selected_time_is_smaller">Selected time is smaller !</string>
    <string name="retry">Retry</string>
    <string name="new_comment">New Comment</string>
    <string name="logout_msg">Are you sure want to Logout ?</string>
    <string name="phone">Phone</string>
    <string name="otp_sent_msg">OTP has been sent to your mobile number.</string>
    <string name="sending_otp">We are sending OTP to your mobile number</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="goto_login">Go to Login</string>
    <string name="phone_verified">Phone Verified</string>
    <string name="verify">Verify</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="your_name">Your name</string>
    <string name="verifing_otp">We are verifying received OTP</string>
    <string name="phone_registered">Phone number already registered !</string>
    <string name="account_not_found">Account not found !</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_otp">Get OTP</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="failed">Fialed !</string>
    <string name="sending_otp_failed">Sorry ! We unable to send you an OTP. Please try again</string>
    <string name="reset_password">Reset Password</string>
    <string name="something_wrong">Something went wrong !</string>
    <string name="password_reset_success">Password reset successfully !</string>
    <string name="transferring_to_dashboard">We transferring you to dashboard…</string>
    <string name="change_password">Change Password</string>
    <string name="wrong_old_password">Wrong old password !</string>
    <string name="assign_to_me_also">Assign to me also</string>
    <string name="none">None</string>
    <string name="hello">Hello</string>
    <string name="assign_from">Assigned From :</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="my_contacts">My Contacts</string>
    <string name="block">Block</string>
    <string name="block_user_msg">Do you really want to block this user ?</string>
    <string name="active">Active</string>
    <string name="blocked">Blocked</string>
    <string name="unblock">Unblock</string>
    <string name="unblock_user_msg">Do you really want to unblock the user ?</string>
    <string name="list_is_empty">List is empty</string>
    <string name="completed_by">Completed By :</string>

    <string name="notifications_admin_channel_name">Admin Channel</string>
    <string name="notifications_admin_channel_description">admin channel description</string>
    <string name="task_finished_title">Task Finished</string>
    <string name="you">You</string>
    <string name="select_custom_noti_tone">Custom notification tone</string>
    <string name="or">Or</string>
    <string name="select_notification_tone">Select notification tone</string>
    <string name="resend">Resend</string>
    <string name="press_again_to_exit">Press BACK again to exit</string>
    <string name="write_otp">Enter OTP here</string>
    <string name="failed_to_receive_otp">Failed to receive OTP ! Please try to resend code.</string>
    <string name="search_customer">Search customer</string>
    <string name="current_speech_input_language">Current Speech Language</string>
    <string name="english">English</string>
    <string name="change">Change</string>
    <string name="total">Total</string>
    <string name="every_day">Every Day</string>
    <string name="self">Self</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
