<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_new"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/create_new_todo" />

        <item
            android:id="@+id/nav_task_list"
            android:icon="@drawable/ic_list_24_dp"
            android:title="@string/task_list" />

        <item
            android:id="@+id/nav_my_contacts"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/my_contacts" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/invite"
                android:visible="false"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_black_24"
                android:title="@string/logout" />
        </menu>
    </item>


</menu>
