<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_white_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/ten_dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/finish_task"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_toStartOf="@id/iv_close"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/ten_dp"
        android:background="@drawable/bg_et"
        android:gravity="start"
        android:hint="@string/comment"
        android:padding="@dimen/five_dp"
        android:autofillHints=""
        android:inputType="textMultiLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@color/colorPrimaryDark"
            android:text="@string/complete"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_add_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_comment"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>










